--- a/Biodiversity-3.html
+++ b/Biodiversity-3.html
@@ -208,7 +208,7 @@
 <div class="l-wrapper clearfix m-header-top b-header_content__container">
 <div class="b-header_content__items">
 <div class="b-header_content__item m-header_content__item-progress m-header_content__item-progress_last">
-<div id="rjs-vp-addition-header" class= "progress-container"><div class="b-progress_bg"><div id="progress_circle">
+<div id="rjs-vp-addition-header" class= "progress-container">"><div class="b-progress_bg">"><div id="progress_circle">
 <svg height="60" width="60"><circle cx="30" cy="30" r="27" stroke="#e1dfe1" stroke-width="6" fill-opacity="0"></circle></svg></div>
 <div class="b-progress_title">0%</div></div></div></div>
 <div class="b-header_content__item m-header_content__title">
@@ -254,15 +254,14 @@ allowfullscreen></iframe>
 <!-- video ends -->
 <!-- video parts start -->
 <div class="parts_pop_up_js" align="center">
-	<button class="video-parts"><a href="./index.html">Part 1</a></button> <button class="video-parts"><a href="./Biodiversity-2.html">Part 2</a></button>
+    <button class="video-parts"><a href="./index.html">Part 1</a></button> <button class="video-parts"><a href="./Biodiversity-2.html">Part 2</a></button>
 	<button class="video-parts"><a href="./Biodiversity-3.html">Part 3</a>
-	
 </div>
 <!-- video parts end -->
 <!-- QR starts -->
 <div class="qr_pop_up_js" align="center">
 	<span class="qr-code">
-	<img src='./media/Biodiversity.png' style='width:500px; height:auto;'/>
+	<img src='./media/Biodiversity-3.png' style='width:500px; height:auto;'/>
 	</span>
 </div>
 <!-- QR ends -->
@@ -322,7 +321,7 @@ allowfullscreen></iframe>
 
           <div class="final-result">Result: <span id="result" class="final-result-number">number</span> points</div>
 		   <div class="under-result">
-      <h2 class="b-sub_header__title_content"><a class="clickTo-2" href="">Play again </a><a class="clickTo-2" href="./Biodiversity-2.html">Next part</a></h2>
+      <h2 class="b-sub_header__title_content"><a class="clickTo-2" href="">Play again </a><a class="clickTo-2" href="./index.html">Next part</a></h2>
 	  </div>
     </div>
 	<br><br><br>
@@ -334,181 +333,164 @@ allowfullscreen></iframe>
 
 <!-- Puzzle pieces start-->
 <script>
- 
+
   window.type_puzzles = 'post';
-  window.App.data = {"id":22879,"title":"biodiversity",
+  window.App.data = {"id":22881,"title":"biodiversity",
  
 "preview_img":"./media/logo.png","current_piece_index":0,"subtitles"
   :[
   
 {"id":101246,"position":0,"piece_index":0,"wrapped":
   
-  "<span class=\"word-wrapper\">Our planet's diverse thriving ecosystems may seem like permanent fixtures,<br>ระบบนิเวศน์อันหลากหลายอุดมสมบูรณ์ของโลกเรา อาจดูเหมือนจะเป็นสิ่งที่ยั่งยืน<\/span>",
+  "<span class=\"word-wrapper\">Every link provides stability to the next, strengthening biodiversity's weave.<br>ทุกความเชื่อมโยงให้ความมั่นคง กับความเชื่อมโยงถัดไป ทำให้การโยงใยของความหลากหลายทางชีวภาพ มั่นคงแข็งแรง<\/span>",
   
-  "audio":"./media/video_pieces/mp4/22879/0.mp4",
+  "audio":"./media/video_pieces/mp4/22881/0.mp4",
  
   "expressions":[],"puzzles":[
   
-  {"index":0,"value":  "Our planet's",              "valueOrig":   "Our planet's",           "translation":    ""},
-  {"index":1,"value":  "diverse",       "valueOrig":   "diverse",    "translation":    ""},
-  {"index":2,"value":  "thriving ecosystems",       "valueOrig":   "thriving ecosystems",    "translation":    ""},
-  {"index":3,"value":  "may seem like",             "valueOrig":   "may seem like",        "translation":   ""},
-  {"index":4,"value":  "permanent fixtures",           "valueOrig":     "permanent fixtures",           "translation":   ""},
+  {"index":0,"value":  "Every link",              "valueOrig":   "Every link",           "translation":    ""},
+  {"index":1,"value":  "provides stability",       "valueOrig":   "provides stability",    "translation":    ""},
+  {"index":2,"value":  "to the next",             "valueOrig":   "to the next",    "translation":    ""},
+  {"index":3,"value":  "strengthening",             "valueOrig":   "strengthening",        "translation":   ""},
+  {"index":4,"value":  "biodiversity's weave",             "valueOrig":   "biodiversity's weave",        "translation":   ""},
   ],},
   
 {"id":101247,"position":1,"piece_index":1,"wrapped":
-  "<span class=\"width-130\">but they're actually vulnerable to collapse.<br>แต่อันที่จริงแล้วมันเปราะบาง ต่อการล่มสลาย<\/span>",
+  "<span class=\"width-130\">That weave is further reinforced<br>การโยงใยนี้ถูกเสริมความแข็งแรงขึ้นอีก<\/span>",
   
- "audio":"./media/video_pieces/mp4/22879/1.mp4",
+ "audio":"./media/video_pieces/mp4/22881/1.mp4",
  
  "expressions":[],"puzzles":[
  
-  {"index":0,"value":  "but",      "valueOrig":   "but",           "translation":    ""},
-  {"index":1,"value":  "they're",                "valueOrig":      "they're",    "translation":    ""},
-  {"index":2,"value":  "actually",             "valueOrig":   "actually",           "translation":   ""},
-  {"index":3,"value":  "vulnerable",             "valueOrig":   "vulnerable",           "translation":   ""}, 
-  {"index":4,"value":  "to collapse",             "valueOrig":   "to collapse",           "translation":   ""},   
+  {"index":0,"value":  "That",                    "valueOrig":   "That",           "translation":    ""},
+  {"index":1,"value":  "weave",                "valueOrig":      "weave",    "translation":    ""},
+  {"index":2,"value":  "is",             "valueOrig":   "is",           "translation":   ""},
+  {"index":3,"value":  "further",             "valueOrig":   "further",           "translation":   ""}, 
+  {"index":4,"value":  "reinforced",             "valueOrig":   "reinforced",           "translation":   ""},   
   ],},
   
   {"id":101248,"position":2,"piece_index":2,"wrapped":
   
   
-  "<span class=\"word-wrapper\">Jungles can become deserts,<br>ป่าอาจกลายเป็นทะเลทราย<\/span>",
+  "<span class=\"word-wrapper\">by the genetic diversity within individual species,<br>ด้วยความหลากหลายทางพันธุกรรม ในแต่ละสายพันธุ์<\/span>",
   
- "audio":"./media/video_pieces/mp4/22879/2.mp4",
+ "audio":"./media/video_pieces/mp4/22881/2.mp4",
   
   "expressions":[],"puzzles":[
   
-  {"index":0,"value":  "Jungles",              "valueOrig":   "Jungles",           "translation":    ""},
-  {"index":1,"value":  "can",       "valueOrig":   "can",    "translation":    ""},
-  {"index":2,"value":  "become",             "valueOrig":   "become",           "translation":   ""},
-  {"index":3,"value":  "deserts",        "valueOrig":    "deserts",     "translation":   ""},
+  {"index":0,"value":  "by the genetic",              "valueOrig":   "by the genetic",           "translation":    ""},
+  {"index":1,"value":  "diversity",       "valueOrig":   "diversity",    "translation":    ""},
+  {"index":2,"value":  "within",             "valueOrig":   "within",           "translation":   ""},
+  {"index":3,"value":  "individual",        "valueOrig":    "individual",     "translation":   ""},
+  {"index":4,"value":  "species",        "valueOrig":    "species",     "translation":   ""},
   ],},
   
   {"id":101249,"position":3,"piece_index":3,"wrapped":
   
-  "<span class=\"word-wrapper\">and reefs can become lifeless rocks,<br>และแนวปะการังอาจกลายเป็นแนวหินไร้ชีวิต<\/span>",
+  "<span class=\"word-wrapper\">which allows them to cope with changes.<br>ซึ่งทำให้มันสามารถรับมือกับการเปลี่ยนแปลง<\/span>",
   
-  "audio":"./media/video_pieces/mp4/22879/3.mp4",
+  "audio":"./media/video_pieces/mp4/22881/3.mp4",
   "expressions":[],"puzzles":[
   
-  {"index":0,"value":  "and reefs",    "valueOrig":   "and reefs",           "translation":    ""},
-  {"index":1,"value":  "can",       "valueOrig":   "can",    "translation":    ""},
-  {"index":2,"value":  "become",             "valueOrig":   "become",           "translation":   ""},
-  {"index":3,"value":  "lifeless",        "valueOrig":    "lifeless",     "translation":   ""},
-  {"index":4,"value":  "rocks",        "valueOrig":    "rocks",     "translation":   ""},
+  {"index":0,"value":  "which",    "valueOrig":   "which",           "translation":    ""},
+  {"index":1,"value":  "allows them",       "valueOrig":   "allows them",    "translation":    ""},
+  {"index":2,"value":  "to cope with",             "valueOrig":   "to cope with",           "translation":   ""},
+  {"index":3,"value":  "changes",        "valueOrig":    "changes",     "translation":   ""},
   ],},
  
   {"id":101250,"position":4,"piece_index":4,"wrapped":
   
-  "<span class=\"word-wrapper\">even without cataclysmic events, like volcanoes and asteroids.<br>แม้จะไม่มีเหตุการณ์ความรุนแรงทางธรรมชาติ เช่น ภูเขาไฟ หรือดาวเคราะห์ชนโลก<\/span>",
+  "<span class=\"word-wrapper\">Species that lack genetic diversity due to isolation<br>สายพันธุ์ที่ขาดความหลากหลายทางพันธุกรรม เนื่องจากการแยก<\/span>",
   
-  "audio":"./media/video_pieces/mp4/22879/4.mp4",
+  "audio":"./media/video_pieces/mp4/22881/4.mp4",
   "expressions":[], "puzzles":[
   
-  {"index":0,"value":  "even without",              "valueOrig":   "even without",           "translation":    ""},
-  {"index":1,"value":  "cataclysmic",       "valueOrig":   "cataclysmic",    "translation":    ""},
-  {"index":2,"value":  "events",             "valueOrig":   "events",           "translation":   ""},
-  {"index":3,"value":  "like volcanoes",        "valueOrig":    "like volcanoes",     "translation":   ""}, 
-  {"index":4,"value":  "and asteroids",        "valueOrig":    "and asteroids",     "translation":   ""}, 
+  {"index":0,"value":  "Species",              "valueOrig":   "Species",           "translation":    ""},
+  {"index":1,"value":  "that lack",       "valueOrig":   "that lack",    "translation":    ""},
+  {"index":2,"value":  "genetic diversity",             "valueOrig":   "genetic diversity",           "translation":   ""},
+  {"index":3,"value":  "due to",        "valueOrig":    "due to",     "translation":   ""}, 
+  {"index":4,"value":  "isolation",        "valueOrig":    "isolation",     "translation":   ""}, 
   ],},
  
    {"id":101251,"position":5,"piece_index":5,"wrapped":
   
-   "<span class=\"word-wrapper\">What makes one ecosystem strong and another weak in the face of change?<br>อะไรทำให้ระบบนิเวศน์หนึ่งแข็งแรง และอีกที่หนึ่งอ่อนแอท่ามกลางการเปลี่ยนแปลง<\/span>",
+   "<span class=\"word-wrapper\">or low population numbers,<br>หรือมีประชากรน้อย<\/span>",
   
-  "audio":"./media/video_pieces/mp4/22879/5.mp4",
+  "audio":"./media/video_pieces/mp4/22881/5.mp4",
   "expressions":[], "puzzles":[
   
-  {"index":0,"value":  "What makes",              "valueOrig":   "What makes",           "translation":    ""},
-  {"index":1,"value":  "one ecosystem strong",       "valueOrig":   "one ecosystem strong",    "translation":    ""},
-  {"index":2,"value":  "and another weak",             "valueOrig":   "and another weak",           "translation":   ""},
-  {"index":3,"value":  "in the face of",        "valueOrig":    "in the face of",     "translation":   ""},
-  {"index":4,"value":  "change",        "valueOrig":    "change",     "translation":   ""},
+  {"index":0,"value":  "or",              "valueOrig":   "or",           "translation":    ""},
+  {"index":1,"value":  "low",       "valueOrig":   "low",    "translation":    ""},
+  {"index":2,"value":  "population",             "valueOrig":   "population",           "translation":   ""},
+  {"index":3,"value":  "numbers",        "valueOrig":    "numbers",     "translation":   ""},
   ],},
   
   {"id":101252,"position":6,"piece_index":6,"wrapped":
   
-  "<span class=\"word-wrapper\">The answer, to a large extent, is biodiversity.<br>คำตอบในภาพรวมคือ ความหลากหลายทางชีวภาพ<\/span>",
+  "<span class=\"word-wrapper\">are much more vulnerable to fluctuations<br>จะเปราะบางมากกว่าต่อการเปลี่ยนแปลง<\/span>",
  
   
-  "audio":"./media/video_pieces/mp4/22879/6.mp4",
+  "audio":"./media/video_pieces/mp4/22881/6.mp4",
   "expressions":[], "puzzles":[
   
 
-  {"index":0,"value":  "The answer",              "valueOrig":   "The answer",           "translation":    ""},
-  {"index":1,"value":  "to a large",       "valueOrig":   "to a large",    "translation":    ""},
-  {"index":2,"value":  "extent",             "valueOrig":   "extent",           "translation":   ""},
-  {"index":3,"value":  "is",        "valueOrig":    "is",     "translation":   ""}, 
-  {"index":4,"value":  "biodiversity",        "valueOrig":    "biodiversity",     "translation":   ""}, 
+  {"index":0,"value":  "are",              "valueOrig":   "are",           "translation":    ""},
+  {"index":1,"value":  "much",       "valueOrig":   "much",    "translation":    ""},
+  {"index":2,"value":  "more",             "valueOrig":   "more",           "translation":   ""},
+  {"index":3,"value":  "vulnerable to",        "valueOrig":    "vulnerable to",     "translation":   ""}, 
+  {"index":4,"value":  "fluctuations",        "valueOrig":    "fluctuations",     "translation":   ""}, 
   ],}, 
 
  
    {"id":101253,"position":7,"piece_index":7,"wrapped":
   
-  "<span class=\"word-wrapper\">Biodiversity is built out of three intertwined features:<br>ความหลากหลายทางชีวภาพ เกิดขึ้นจากความพิเศษสามสิ่งที่เชื่อมโยงกัน<\/span>",
+  "<span class=\"word-wrapper\">caused by climate change, disease or habitat fragmentation.<br>ที่เกิดจากการเปลี่ยนแปลงภูมิอากาศ โรค และที่อยู่อาศัยที่ถูกแยกย่อย<\/span>",
  
   
-  "audio":"./media/video_pieces/mp4/22879/7.mp4",
+  "audio":"./media/video_pieces/mp4/22881/7.mp4",
   "expressions":[], "puzzles":[
   
 
-  {"index":0,"value":  "Biodiversity",              "valueOrig":   "Biodiversity",           "translation":    ""},
-  {"index":1,"value":  "is built out of",       "valueOrig":   "is built out of",    "translation":    ""},
-  {"index":2,"value":  "three",             "valueOrig":   "three",           "translation":   ""},
-  {"index":3,"value":  "intertwined",        "valueOrig":    "intertwined",     "translation":   ""}, 
-  {"index":4,"value":  "features",        "valueOrig":    "features",     "translation":   ""}, 
+  {"index":0,"value":  "caused by",              "valueOrig":   "caused by",           "translation":    ""},
+  {"index":1,"value":  "climate change",       "valueOrig":   "climate change",    "translation":    ""},
+  {"index":2,"value":  "disease",             "valueOrig":   "disease",           "translation":   ""},
+  {"index":3,"value":  "or habitat",             "valueOrig":   "or habitat",           "translation":   ""},
+  {"index":4,"value":  "fragmentation",             "valueOrig":   "fragmentation",           "translation":   ""},
   ],}, 
  
  {"id":101254,"position":8,"piece_index":8,"wrapped":
   
-  "<span class=\"word-wrapper\">ecosystem diversity, species diversity, and genetic diversity.<br>ความหลากหลายของระบบนิเวศน์ ความหลากหลายของสายพันธุ์  และความหลากหลายทางพันธุกรรม<\/span>",
+  "<span class=\"word-wrapper\">Whenever a species disappears because of its weakened gene pool,<br>เมื่อใดก็ตามที่สายพันธุ์สูญหายไป เพราะแหล่งรวมพันธุกรรมของมันอ่อนแอ<\/span>",
  
   
-  "audio":"./media/video_pieces/mp4/22879/8.mp4",
+  "audio":"./media/video_pieces/mp4/22881/8.mp4",
   "expressions":[], "puzzles":[
   
 
-  {"index":0,"value":  "ecosystem diversity",              "valueOrig":   "ecosystem diversity",           "translation":    ""},
-  {"index":1,"value":  "species diversity",       "valueOrig":   "species diversity",    "translation":    ""},
-  {"index":2,"value":  "and",             "valueOrig":   "and",           "translation":   ""},
-  {"index":3,"value":  "genetic diversity",        "valueOrig":    "genetic diversity",     "translation":   ""}, 
+  {"index":0,"value":  "Whenever a species",              "valueOrig":   "Whenever a species",           "translation":    ""},
+  {"index":1,"value":  "disappears",       "valueOrig":   "disappears",    "translation":    ""},
+  {"index":2,"value":  "because of",             "valueOrig":   "because of",           "translation":   ""},
+  {"index":3,"value":  "its weakened",        "valueOrig":    "its weakened",     "translation":   ""},
+  {"index":4,"value":  "gene pool",        "valueOrig":    "gene pool",     "translation":   ""},   
   ],}, 
  
  {"id":101255,"position":9,"piece_index":9,"wrapped":
   
-  "<span class=\"word-wrapper\">The more intertwining there is between these features,<br>ยิ่งสามสิ่งนี้มีความเชื่อมโยงกันมากเท่าใด<\/span>",
+  "<span class=\"word-wrapper\">a knot is untied and parts of the net disintegrate.<br>ปมนี้ก็จะถูกคลาย และส่วนของการโยงใยก็จะแยกสลาย<\/span>",
  
   
-  "audio":"./media/video_pieces/mp4/22879/9.mp4",
+  "audio":"./media/video_pieces/mp4/22881/9.mp4",
   "expressions":[], "puzzles":[
   
 
-  {"index":0,"value":  "The more",              "valueOrig":   "The more",           "translation":    ""},
-  {"index":1,"value":  "intertwining",       "valueOrig":   "intertwining",    "translation":    ""},
-  {"index":2,"value":  "there is",             "valueOrig":   "there is",           "translation":   ""},
-  {"index":3,"value":  "between",        "valueOrig":    "between",     "translation":   ""},
-  {"index":4,"value":  "these features",        "valueOrig":    "these features",     "translation":   ""},
+  {"index":0,"value":  "a knot",              "valueOrig":   "a knot",           "translation":    ""},
+  {"index":1,"value":  "is untied",       "valueOrig":   "is untied",    "translation":    ""},
+  {"index":2,"value":  "and parts of",             "valueOrig":   "and parts of",           "translation":   ""},
+  {"index":3,"value":  "the net",        "valueOrig":    "the net",     "translation":   ""},
+  {"index":4,"value":  "disintegrate",        "valueOrig":    "disintegrate",     "translation":   ""},
   ],},  
   
-   {"id":101256,"position":10,"piece_index":10,"wrapped":
-  
-  "<span class=\"word-wrapper\">the denser and more resilient the weave becomes.<br>ความสัมพันธ์ก็ยิ่งแนบแน่น และยืดหยุ่นมากขึ้นเท่านั้น<\/span>",
- 
-  
-  "audio":"./media/video_pieces/mp4/22879/10.mp4",
-  "expressions":[], "puzzles":[
-  
-
-  {"index":0,"value":  "the denser",              "valueOrig":   "the denser",           "translation":    ""},
-  {"index":1,"value":  "and more",       "valueOrig":   "and more",    "translation":    ""},
-  {"index":2,"value":  "resilient",             "valueOrig":   "resilient",           "translation":   ""},
-  {"index":3,"value":  "the weave",        "valueOrig":    "the weave",     "translation":   ""}, 
-  {"index":4,"value":  "becomes",        "valueOrig":    "becomes",     "translation":   ""}, 
-  ],}, 
- 
- 
-  
+   
  ],
  
  
