--- a/Biodiversity-2.html
+++ b/Biodiversity-2.html
@@ -80,7 +80,7 @@
             Video
         </a>
         <div class="redesign-header__upd-menu-submenu" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ItemList" style="display: none;"> 
-          <a href="https://gangstasoul.github.io/index/" class="redesign-header__upd-submenu-item" target="_blank" itemprop="url">
+          <a href="./index.html" class="redesign-header__upd-submenu-item" target="_blank" itemprop="url">
             <div class="redesign-header__upd-submenu-item-icon">  
               <div class="redesign-header__submenu-icon puzzle-icon" style="width: 38px; height: 20px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="38" height="20" viewBox="0 0 38 20">
