--- a/Biodiversity-3.html
+++ b/Biodiversity-3.html
@@ -3,7 +3,12 @@
 	<html lang="en">
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta property="og:title" content="Video puzzle" />
+	<meta property="og:description" content="Biodiversity" />
+	<meta property="og:image" content="https://raw.githubusercontent.com/gangstasoul/video-puzzle/refs/heads/main/media/og-image.png" />
+	<meta property="og:url" content="https://gangstasoul.github.io/video-puzzle/" />
+	<meta property="og:type" content="website" />
     <link rel="icon" href="./media/favicon.png" type="image/png">
                    
      <title>Biodiversity</title>
