--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 			        </div>
   
  
-<div class="page-wrapper">oncontextmenu="return false;"
+<div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
 
-<div class="undercap undercap_bg-color_blue">
+<div class="undercap undercap_bg-color_blue" style="width:100vw!important">
 <div class="l-wrapper clearfix m-header-top b-header_content__container">
 <div class="b-header_content__items title_grid">
 <div class="b-header_content__item m-header_content__item-progress m-header_content__item-progress_last">
@@ -242,7 +242,7 @@
     };
   </script>
   
- <div id="under-title" class="under-title" style="max-width:99vw;" >
+ <div id="under-title" class="under-title">
 <div class="show-button">
  <button class="btn btn-lg button-primary show_video_js">Whole video</button>
   <button class="btn btn-lg button-primary show_parts_js">Video parts</button>
@@ -319,7 +319,7 @@
             </script>
 
 <!-- finish starts-->
-<div id="rjs-work-wrapper" class="work-wrapper m-work-wrapper-video in-progress" style="max-width:99vw;" >
+<div id="rjs-work-wrapper" class="work-wrapper m-work-wrapper-video in-progress" xmlns="http://www.w3.org/1999/html">
   
   <div class="b-section n-exercise2_block_1 clearfix j-first_block" style="z-index: inherit;">
     <div id="rjs-vp-phrases" class="b-exercises"><ul id="phrases" class="b-phrases_block__phrases_list">
