--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 </head>
 
-<body class="fullwidth page-video videopuzzle">
+<body class="page-video videopuzzle" style="width:100vw">
 
     <div class="redesign-header puzzle-new-header  redesign-header__short-menu-no">
                  <div class="redesign-header__menu">
@@ -207,7 +207,7 @@
  
 <div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
 
-<div class="undercap undercap_bg-color_blue" style="width:100vw!important">
+<div class="undercap undercap_bg-color_blue">
 <div class="l-wrapper clearfix m-header-top b-header_content__container">
 <div class="b-header_content__items title_grid">
 <div class="b-header_content__item m-header_content__item-progress m-header_content__item-progress_last">
