--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
 </head>
 
-<body class="page-video videopuzzle" style="width:100vw">
+<body class="page-video videopuzzle">
 
-    <div class="redesign-header puzzle-new-header  redesign-header__short-menu-no">
+    <div class="redesign-header puzzle-new-header  redesign-header__short-menu-no" style="width:100vw">
                  <div class="redesign-header__menu">
           <div class="redesign-header__menu-content">
 		  
@@ -205,7 +205,7 @@
 			        </div>
   
  
-<div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
+<div class="page-wrapper" style="min-height: 89px;" style="width:100vw" oncontextmenu="return false;">
 
 <div class="undercap undercap_bg-color_blue">
 <div class="l-wrapper clearfix m-header-top b-header_content__container">
