--- a/Biodiversity-2.html
+++ b/Biodiversity-2.html
@@ -67,7 +67,7 @@
 
 <body class="fullwidth page-video videopuzzle">
 
-    <div class="redesign-header puzzle-new-header  redesign-header__short-menu-no">
+    <div class="redesign-header puzzle-new-header  redesign-header__short-menu-no" style="width:100vw;">
                  <div class="redesign-header__menu">
           <div class="redesign-header__menu-content">
 		  
@@ -206,7 +206,7 @@
  
 <div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
 
-<div class="undercap undercap_bg-color_blue">
+<div class="undercap undercap_bg-color_blue" style="width:100vw;">
 <div class="l-wrapper clearfix m-header-top b-header_content__container">
 <div class="b-header_content__items title_grid">
 <div class="b-header_content__item m-header_content__item-progress m-header_content__item-progress_last">
@@ -241,7 +241,7 @@
     };
   </script>
   
- <div class="under-title">
+ <div class="under-title" style="width:100vw;">
 <div class="show-button">
  <button class="btn btn-lg button-primary show_video_js">Whole video</button>
   <button class="btn btn-lg button-primary show_parts_js">Video parts</button>
@@ -317,7 +317,7 @@ allowfullscreen></iframe>
             </script>
 
 <!-- finish starts-->
-<div id="rjs-work-wrapper" class="work-wrapper m-work-wrapper-video in-progress" xmlns="http://www.w3.org/1999/html">
+<div id="rjs-work-wrapper" class="work-wrapper m-work-wrapper-video in-progress" style="width:100vw;">
   
   <div class="b-section n-exercise2_block_1 clearfix j-first_block" style="z-index: inherit;">
     <div id="rjs-vp-phrases" class="b-exercises"><ul id="phrases" class="b-phrases_block__phrases_list">
