--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ var title = document.getElementById('title-picture')
 	<script type="text/javascript" src="./files/redesign-header.js"></script>
 	<script type="text/javascript" src="./files/runtime.js" defer=""></script>
 	<script type="text/javascript" src="./files/license.js" defer=""></script>
-	<script type="text/javascript" src="./files/main.js" defer=""></script>
+	<script type="text/javascript" src="./files/video-main.js" defer=""></script>
 	<script type="text/javascript" src="./files/helpers.js"></script> 
 	
 	
