--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			        </div>
   
  
-<div class="page-wrapper" style="min-height: 89px;" oncontextmenu="return false;">
+<div class="page-wrapper" style="min-height: 89px;" >oncontextmenu="return false;"
 
 	<div class="undercap undercap_bg-color_blue" style="">
 		<div class="l-wrapper clearfix m-header-top b-header_content__container">
@@ -469,6 +469,12 @@ var title = document.getElementById('title-picture')
 	<script type="text/javascript" src="./files/video-main.js" defer=""></script>
 	<script type="text/javascript" src="./files/helpers.js"></script> 
 	
+	<script>
+	var numberOfItems = document.querySelectorAll(".puzzle__item--defaul").length;
+	for (var i = 0; i < numberOfItems; i++){
+	document.querySelectorAll(".puzzle__item--defaul")[i].addEventListener("click", puzzleClick);
+	};
+	</script>
 	
 	<script>
         var playing = 0;
